--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "lekcja_1",
   "version": "1.0.0",
-  "homepage": "http://kamilGawron.github.io/daftcodeFront",
+  "homepage": "https://kamilgawron.github.io/daftcodeFront/",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "KamilGawron",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "css-loader": "^3.5.2",
+    "style-loader": "^1.1.3"
+  },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
