--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "css-loader": "^3.5.2",
-    "style-loader": "^1.1.3"
+    "style-loader": "^1.1.3",
+    "swiper": "^5.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
